Edit to front matter

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -2,7 +2,7 @@
 import SideBarFooter from "./SideBarFooter.astro";
 import SideBarMenu from "./SideBarMenu.astro";
 import Button from "./Button.astro";
-const { sideBarActiveItemID } = Astro.props;
+// const { sideBarActiveItemID } = Astro.props;
 ---
 
 <div class="drawer-side z-40">
