--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -1,5 +1,5 @@
 ---
-const { sideBarActiveItemId } = Astro.props;
+// const { sideBarActiveItemId } = Astro.props;
 ---
 
 <ul class="menu grow shrink menu-md overflow-y-auto">
