--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import HorizontalCard from '../components/HorizontalCard.astro';
 import { Icon } from 'astro-icon';
 ---
 
-<MainLayout content="Home">
+<MainLayout title="Home">
    <div class="pb-12 mt-5">
     <div class="text-xl py-1">Hey there 👋</div>
     <div class="text-5xl font-bold">I'm Daniel Turner</div>
