--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import HorizontalCard from '../components/HorizontalCard.astro';
 import { Icon } from 'astro-icon';
 ---
 
-<MainLayout>
+<MainLayout title="Home">
    <div class="pb-12 mt-5">
     <div class="text-xl py-1">Hey there 👋</div>
     <div class="text-5xl font-bold">I'm Daniel Turner</div>
@@ -20,7 +20,7 @@ import { Icon } from 'astro-icon';
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="#" target="_blank"> Let's connect!</a>
+      <a class="btn" href="mailto:drturner16@gmail.com" target="_blank"> Let's connect!</a>
       </a>
     </div>
   </div>
